--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.2",
+    "jest": "^22.0.4",
     "node-fetch": "^1.7.3",
     "nunjucks": "^3.0.1"
   }
